<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="260dp"
    android:layout_height="381dp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/voice_terms_popupbg" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/font_notosanskr_medium"
        android:includeFontPadding="false"
        android:text="@string/dialog_terms_title"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:lineSpacingExtra="6sp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/iv_no"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/social_contents_cancel" />

    <TextView
        android:id="@+id/tv_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_notosanskr_medium"
        android:includeFontPadding="false"
        android:text="@string/dialog_terms_agree_no"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:lineSpacingExtra="4sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_no"
        app:layout_constraintEnd_toEndOf="@+id/iv_no"
        app:layout_constraintStart_toStartOf="@+id/iv_no"
        app:layout_constraintTop_toTopOf="@+id/iv_no" />

    <ImageView
        android:id="@+id/iv_ok"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/social_contents_confirm" />

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_notosanskr_medium"
        android:includeFontPadding="false"
        android:text="@string/dialog_terms_agree_yes"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:lineSpacingExtra="4sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_ok"
        app:layout_constraintEnd_toEndOf="@+id/iv_ok"
        app:layout_constraintStart_toStartOf="@+id/iv_ok"
        app:layout_constraintTop_toTopOf="@+id/iv_ok" />

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/font_notosanskr_medium"
        android:includeFontPadding="false"
        android:text="@string/dialog_terms_text_1"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:lineSpacingExtra="6sp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font_notosanskr_regular"
        android:includeFontPadding="false"
        android:text="@string/dialog_terms_text_2"
        android:textColor="#99ffffff"
        android:textSize="12sp"
        android:lineSpacingExtra="2dp"
        app:layout_constraintStart_toStartOf="@+id/tv_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_1" />

    <ImageView
        android:id="@+id/iv_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_2"
        app:srcCompat="@drawable/line_43" />

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_terms_text_3"
        android:fontFamily="@font/font_notosanskr_medium"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:lineSpacingExtra="6sp"
        app:layout_constraintStart_toStartOf="@+id/tv_2"
        app:layout_constraintTop_toBottomOf="@+id/iv_line" />

    <TextView
        android:id="@+id/tv_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_terms_text_4"
        android:fontFamily="@font/font_notosanskr_regular"
        android:includeFontPadding="false"
        android:textColor="#99ffffff"
        android:textSize="12sp"
        android:lineSpacingExtra="4sp"
        app:layout_constraintStart_toStartOf="@+id/tv_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_3" />


</androidx.constraintlayout.widget.ConstraintLayout>